--- a/Build
+++ b/Build
@@ -74,7 +74,7 @@ def build_object_files project, targets, compiler, flags
 	targets.each do |source|
 		target = ".obj/#{project}/" + File.basename(source, File.extname(source)) + ".o"
 		depend = ".dep/#{project}/" + File.basename(source, File.extname(source)) + ".d"
-		exec = "#{compiler} #{flags} #{source} -o #{target} -MD -MF #{depend}"
+		exec = "#{compiler} -c -Wall -Iinclude -Isrc -std=c++11 #{flags} #{source} -o #{target} -MD -MF #{depend}"
 		puts "    [BUILD] #{source}"
 		r = `#{exec}`
 		if $?.exitstatus == 1
@@ -97,7 +97,7 @@ def link_project project, compiler, flags, *additional_objects
 		end
 	end
 	exe = "bin/#{project}"
-	exec = "#{compiler} #{objects} #{flags} -o #{exe}"
+	exec = "#{compiler} #{objects} #{flags} -Wl,-rpath=./lib -o #{exe}"
 	puts "  [LINKING] #{exe}"
 	`#{exec}`
 end
@@ -109,12 +109,9 @@ def compile_project project, compiler, cflags
 	build_object_files project, sources, compiler, cflags
 end
 
-CC             = 'clang++'
-game_CFLAGS  = '-c -Wall -Iinclude -Isrc -ISDL -g -std=c++11'
-game_LDFLAGS = '-Llib -ltcod -ltcodxx -lsqlite3 -lSDL_net -Wl,-rpath=./lib'
-
-test_CFLAGS  = "-c -Wall -ISDL -Isrc -g -std=c++11"
-test_LDFLAGS = '-Llib -ltcod -ltcodxx -lsqlite3 -lSDL_net -Wl,-rpath=./lib'
+CC           = 'clang++'
+CFLAGS  = '-g -ISDL'
+LDFLAGS = '-Llib -ltcod -ltcodxx -lsqlite3 -lSDL_net'
 
 options = {}
 
@@ -127,6 +124,8 @@ optparse = OptionParser.new do|opts|
 	options[:clear] = false
 	opts.on( '-c', '--clear', 'Clears and rebuilds' ) do
 		options[:clear] = true
+	end
+	opts.on( '-r', '--release', 'Compile for release') do
 	end
 	opts.on( '-g', '--help', 'Display help information' ) do
 		puts opts
@@ -147,9 +146,9 @@ end
 
 create_bin_folder
 
-compile_project "DataShatter", CC, game_CFLAGS
-compile_project "test", CC, test_CFLAGS
+compile_project "DataShatter", CC, CFLAGS
+compile_project "test", CC, CFLAGS
 
-link_project "DataShatter", CC, game_LDFLAGS
-link_project "test", CC, test_LDFLAGS, "DataShatter"
+link_project "DataShatter", CC, LDFLAGS
+link_project "test", CC, LDFLAGS, "DataShatter"
 
